--- a/beta/css/style.css
+++ b/beta/css/style.css
@@ -61,8 +61,6 @@ li {
 }
 
 #left {
-    float: left;
-    height: 100%;
     position: relative;
     width: 1000px;
 }
@@ -71,8 +69,7 @@ li {
     background-color: #FFFFFF;
     border-bottom: 1px solid #E3E3E3;
     box-shadow: 0 10px 10px 0 #999999;
-    height: 448px;
-    height: calc(100% - 168px);
+    height: 400px;
     overflow: auto;
     position: relative;
     resize: vertical;
@@ -161,11 +158,6 @@ li {
     text-align: right;
     width: 180px;
 }
-.smallgap {
-    height: 5px;
-    width: 100%;
-}
-
 
 .gap {
     height: 15px;
@@ -561,11 +553,17 @@ li {
 }
 
 #idle {
-    background-color: #c4c4c4;
-    height: 5px;
+    color: #c4c4c4;
+    cursor: pointer;
+    font-size: 16px;
+    height: 18px;
+    left: 0;
+    padding: 10px 10px 10px 18px;
     position: absolute;
-    top: -6px;
-    width: 5px;
+    text-align: center;
+    top: 120px;
+    width: 30px;
+    z-index: 99;
 }
 
 
@@ -592,7 +590,6 @@ li {
 
     #content_wrapper {
         box-shadow: 0 0 8px #999999;
-        height: calc(100% - 238px);
     }
 
     .popup {
@@ -634,18 +631,6 @@ li {
         font-size: 19px;
         line-height: 35px;
         padding: 30px 40px 30px 70px;
-    }
-
-}
-
-@media screen and (max-height: 600px) {
-
-    #content_wrapper {
-        height: 350px;
-    }
-
-    .gap {
-        height: 1px;
     }
 
 }
